--- a/client/app/views/confirm-registration.html
+++ b/client/app/views/confirm-registration.html
@@ -8,12 +8,12 @@
                     </div>
 
                     <div class="panel-body registration">
-                        <div class="alert alert-success" ng-show="!errors">
+                        <div class="alert alert-success" ng-show="!error">
                             Registration process is complete
                             <br/>
                             Wait for redirect to home page
                         </div>
-                        <div class="alert alert-danger" ng-show="errors">
+                        <div class="alert alert-danger" ng-show="error">
                             Registration process cannot complete
                             <br>
                             Chip 'n Dale: Rescue Rangers
