--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -4,32 +4,34 @@
             <div id="login-wrapper">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Заходи</h3>
+                        <h3 class="panel-title">Lets go to us</h3>
                     </div>
                     
                     <div class="panel-body registration">
                         <form class="form-horizontal center-block" role="form" name="lpform" id="lpform" ng-submit="login()" >
                             <div class="form-group">
                                 <div class="col-md-12">
-                                    <label for="email">Мыльце</label>
-                                    <input type="email" id="email" ng-pattern="/@.+\..+$/" class="form-control" ng-class="{ 'input-error' : errors.email }" id="login" ng-change="changeData()" ng-model="email" placeholder="email">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" ng-pattern="/@.+\..+$/" class="form-control" ng-class="{ 'input-error' : errors.email }" id="login" ng-change="changeData()" ng-model="email" placeholder="Email">
                                     <i class="fa fa-user"></i>
                                 </div>
                             </div>
                             
                             <div class="form-group">
                                 <div class="col-md-12">
-                                    <label for="password">Заветное слово</label>
-                                    <input type="password" class="form-control" id="password" ng-class="{ 'input-error' : errors.password }" ng-change="changeData()" ng-model="password" placeholder="пароль">
-                                    <i class="fa fa-lock"></i>                                    
+                                    <label for="password">Super secret password</label>
+                                    <input type="password" class="form-control" id="password" ng-class="{ 'input-error' : errors.password }" ng-change="changeData()" ng-model="password" placeholder="Password">
+                                    <i class="fa fa-lock"></i>
+
+                                    <div class="pull-right">
+                                        <a class="" href="#!/reset-password">Forget password?</a>
+                                    </div>
                                 </div>
                             </div>
                             
                             <div class="form-group">
                                 <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success" value="Заходы дарагой, вино пить будем"/>
-                                    <hr>
-                                    <a id="regLink" data-color="gray" href="#!/register" class="ladda-button btn-block">Регатся регатся</a>
+                                    <input type="submit" class="btn btn-success" value="Login"/>
                                 </div>
                             </div>
 
