--- a/client/app/views/register.html
+++ b/client/app/views/register.html
@@ -8,12 +8,19 @@
                     </div>
 
                     <div class="panel-body registration">
-                        <form class="form-horizontal center-block" role="form" name="lpform" id="lpform" ng-submit="register()" >
+                        <form class="form-horizontal center-block" role="form" name="lpform" ng-submit="register()" >
 
                             <div class="form-group">
                                 <div class="col-md-12">
                                     <label for="name">Name</label>
-                                    <input type="name" id="name" ng-pattern="/@.+\..+$/" class="form-control" ng-class="{ 'input-error' : errors.name }" id="name" ng-change="changeData()" ng-model="name" placeholder="Name">
+                                    <input type="text"
+                                           id="name"
+                                           ng-pattern="/@.+\..+$/"
+                                           class="form-control"
+                                           ng-class="{ 'input-error' : errors.name }"
+                                           ng-model="name"
+                                           ng-disabled="process"
+                                           placeholder="Name">
                                     <i class="fa fa-user"></i>
                                 </div>
                             </div>
@@ -21,7 +28,14 @@
                             <div class="form-group">
                                 <div class="col-md-12">
                                     <label for="email">Email</label>
-                                    <input type="email" id="email" ng-pattern="/@.+\..+$/" class="form-control" ng-class="{ 'input-error' : errors.email }" id="login" ng-change="changeData()" ng-model="email" placeholder="email">
+                                    <input type="email"
+                                           id="email"
+                                           ng-pattern="/@.+\..+$/"
+                                           class="form-control"
+                                           ng-class="{ 'input-error' : errors.email }"
+                                           ng-model="email"
+                                           ng-disabled="process"
+                                           placeholder="email">
                                     <i class="fa fa-user"></i>
                                 </div>
                             </div>
@@ -29,16 +43,21 @@
                             <div class="form-group">
                                 <div class="col-md-12">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" ng-class="{ 'input-error' : errors.password }" ng-change="changeData()" ng-model="password" placeholder="пароль">
+                                    <input type="password"
+                                           class="form-control"
+                                           id="password"
+                                           ng-class="{ 'input-error' : errors.password }"
+                                           ng-change="changeData()"
+                                           ng-model="password"
+                                           ng-disabled="process"
+                                           placeholder="пароль">
                                     <i class="fa fa-lock"></i>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success" value="Register me"/>
-                                    <hr>
-                                    <a id="regLink" data-color="gray" href="#!/login" class="btn btn-default">Login</a>
+                                    <input type="submit" class="col-md-12 btn btn-success" value="Register me" ng-disabled="process"/>
                                 </div>
                             </div>
 
