--- a/client/app/css/style.css
+++ b/client/app/css/style.css
@@ -278,19 +278,9 @@ img {
   #header .user-nav ul {
     padding-left: 0;
   }
-  #header .toggle-navigation.toggle-left {
-    float: left;
-  }
-  #header .toggle-navigation.toggle-left.active {
-    background: gray;
-  }
+
   .user-nav ul li {
     font-size: 0.75em;
-  }
-}
-@media only screen and (max-width: 479px) {
-  #header .dropdown.messages {
-    display: none;
   }
 }
 
@@ -312,12 +302,7 @@ img {
   font-weight: 300;
   font-size: 1.5em;
 }
-.main-content-toggle-left {
-  margin-left: 0;
-}
-.main-content-toggle-right {
-  margin-right: 240px;
-}
+
 .pageheader {
   padding: 15px;
   border-bottom: 1px solid #dce0e6;
@@ -411,51 +396,6 @@ img {
 .ng-isolate-scope.active .ng-binding {
   margin-right: 0;
 }
-.social {
-  margin: 0;
-  padding: 0;
-}
-.social ul {
-  margin: 0;
-  padding: 5px;
-}
-.social ul li {
-  margin: 5px;
-  list-style: none outside none;
-  display: inline-block;
-}
-.social i {
-  width: 40px;
-  height: 40px;
-  color: #FFF;
-  background-color: #909AA0;
-  font-size: 22px;
-  text-align: center;
-  padding-top: 12px;
-  border-radius: 50%;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -o-border-radius: 50%;
-  transition: all ease 0.3s;
-  -moz-transition: all ease 0.3s;
-  -webkit-transition: all ease 0.3s;
-  -o-transition: all ease 0.3s;
-  -ms-transition: all ease 0.3s;
-}
-.social i:hover {
-  color: #FFF;
-  text-decoration: none;
-  transition: all ease 0.3s;
-  -moz-transition: all ease 0.3s;
-  -webkit-transition: all ease 0.3s;
-  -o-transition: all ease 0.3s;
-  -ms-transition: all ease 0.3s;
-}
-.social .fa-facebook:hover {
-  background: #4060A5;
-}
-
-
 
 /* ==========================================================================
    Error Pages 404 and 500
@@ -502,513 +442,6 @@ img {
   color: #000;
 }
 
-
-.theme-dark #header {
-  background: #fff;
-}
-.theme-dark #header .brand {
-  background: #1D212A;
-}
-.theme-dark #header .brand .logo {
-  color: #fff;
-}
-
-.theme-blue #header {
-  background: #fff;
-}
-.theme-blue #header .brand {
-  background: #1f7bb6;
-}
-.theme-blue #header .brand .logo {
-  color: #fff;
-}
-.theme-blue #header button.sidebar-toggle,
-.theme-blue #header button#toggle-profile,
-.theme-blue #header .nav li.profile > a {
-  color: #1d212a;
-}
-.theme-blue #header button.sidebar-toggle:hover,
-.theme-blue #header button.sidebar-toggle:active,
-.theme-blue #header button#toggle-profile:hover,
-.theme-blue #header button#toggle-profile:active {
-  background: #f6f8f8;
-}
-.theme-blue #header .nav li.profile > a:hover,
-.theme-blue #header .nav li.profile > a:active,
-.theme-blue #header .nav li.profile > a:focus {
-  background: #f6f8f8;
-}
-.theme-blue .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-blue .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-blue .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-blue .sidebar-left .nav > li.active > a,
-.theme-blue .sidebar-left .nav > li.active > a:focus,
-.theme-blue .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #1f7bb6;
-}
-.theme-blue .sidebar-left .nav > li.open > a,
-.theme-blue .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-blue.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-blue.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-blue .sidebar-profile {
-  background: #13161c;
-}
-.theme-blue.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-blue.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-blue.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-blue .sidebar-left .nav > li.active > a,
-.theme-blue .sidebar-left .nav > li.active > a:focus,
-.theme-blue .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #1f7bb6;
-}
-.theme-blue.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-blue.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-blue-full #header {
-  background: #1f7bb6;
-}
-.theme-blue-full #header .brand {
-  background: #1f7bb6;
-}
-.theme-blue-full #header .brand .logo {
-  color: #fff;
-}
-.theme-blue-full #header button.sidebar-toggle,
-.theme-blue-full #header button#toggle-profile,
-.theme-blue-full #header .nav li.profile > a {
-  color: #fff;
-}
-.theme-blue-full #header button.sidebar-toggle:hover,
-.theme-blue-full #header button.sidebar-toggle:active,
-.theme-blue-full #header button#toggle-profile:hover,
-.theme-blue-full #header button#toggle-profile:active {
-  background: #238acc;
-}
-.theme-blue-full #header .nav li.profile > a:hover,
-.theme-blue-full #header .nav li.profile > a:active,
-.theme-blue-full #header .nav li.profile > a:focus {
-  background: #238acc;
-}
-.theme-blue-full .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-blue-full .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-blue-full .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-blue-full .sidebar-left .nav > li.active > a,
-.theme-blue-full .sidebar-left .nav > li.active > a:focus,
-.theme-blue-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #1f7bb6;
-}
-.theme-blue-full .sidebar-left .nav > li.open > a,
-.theme-blue-full .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-blue-full .sidebar-profile {
-  background: #13161c;
-}
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-blue-full .sidebar-left .nav > li.active > a,
-.theme-blue-full .sidebar-left .nav > li.active > a:focus,
-.theme-blue-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #1f7bb6;
-}
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-blue-full.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-grey #header {
-  background: #fff;
-}
-.theme-grey #header .brand {
-  background: #909aa0;
-}
-.theme-grey #header .brand .logo {
-  color: #fff;
-}
-.theme-grey #header button.sidebar-toggle,
-.theme-grey #header button#toggle-profile,
-.theme-grey #header .nav li.profile > a {
-  color: #1d212a;
-}
-.theme-grey #header button.sidebar-toggle:hover,
-.theme-grey #header button.sidebar-toggle:active,
-.theme-grey #header button#toggle-profile:hover,
-.theme-grey #header button#toggle-profile:active {
-  background: #f6f8f8;
-}
-.theme-grey #header .nav li.profile > a:hover,
-.theme-grey #header .nav li.profile > a:active,
-.theme-grey #header .nav li.profile > a:focus {
-  background: #f6f8f8;
-}
-.theme-grey .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-grey .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-grey .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-grey .sidebar-left .nav > li.active > a,
-.theme-grey .sidebar-left .nav > li.active > a:focus,
-.theme-grey .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #909aa0;
-}
-.theme-grey .sidebar-left .nav > li.open > a,
-.theme-grey .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-grey.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-grey.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-grey .sidebar-profile {
-  background: #13161c;
-}
-.theme-grey.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-grey.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-grey.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-grey .sidebar-left .nav > li.active > a,
-.theme-grey .sidebar-left .nav > li.active > a:focus,
-.theme-grey .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #909aa0;
-}
-.theme-grey.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-grey.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-grey-full #header {
-  background: #909aa0;
-}
-.theme-grey-full #header .brand {
-  background: #909aa0;
-}
-.theme-grey-full #header .brand .logo {
-  color: #fff;
-}
-.theme-grey-full #header button.sidebar-toggle,
-.theme-grey-full #header button#toggle-profile,
-.theme-grey-full #header .nav li.profile > a {
-  color: #fff;
-}
-.theme-grey-full #header button.sidebar-toggle:hover,
-.theme-grey-full #header button.sidebar-toggle:active,
-.theme-grey-full #header button#toggle-profile:hover,
-.theme-grey-full #header button#toggle-profile:active {
-  background: #9ea7ac;
-}
-.theme-grey-full #header .nav li.profile > a:hover,
-.theme-grey-full #header .nav li.profile > a:active,
-.theme-grey-full #header .nav li.profile > a:focus {
-  background: #9ea7ac;
-}
-.theme-grey-full .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-grey-full .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-grey-full .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-grey-full .sidebar-left .nav > li.active > a,
-.theme-grey-full .sidebar-left .nav > li.active > a:focus,
-.theme-grey-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #909aa0;
-}
-.theme-grey-full .sidebar-left .nav > li.open > a,
-.theme-grey-full .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-grey-full .sidebar-profile {
-  background: #13161c;
-}
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-grey-full .sidebar-left .nav > li.active > a,
-.theme-grey-full .sidebar-left .nav > li.active > a:focus,
-.theme-grey-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #909aa0;
-}
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-grey-full.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-green #header {
-  background: #fff;
-}
-.theme-green #header .brand {
-  background: #27b6af;
-}
-.theme-green #header .brand .logo {
-  color: #fff;
-}
-.theme-green #header button.sidebar-toggle,
-.theme-green #header button#toggle-profile,
-.theme-green #header .nav li.profile > a {
-  color: #1d212a;
-}
-.theme-green #header button.sidebar-toggle:hover,
-.theme-green #header button.sidebar-toggle:active,
-.theme-green #header button#toggle-profile:hover,
-.theme-green #header button#toggle-profile:active {
-  background: #f6f8f8;
-}
-.theme-green #header .nav li.profile > a:hover,
-.theme-green #header .nav li.profile > a:active,
-.theme-green #header .nav li.profile > a:focus {
-  background: #f6f8f8;
-}
-.theme-green .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-green .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-green .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-green .sidebar-left .nav > li.active > a,
-.theme-green .sidebar-left .nav > li.active > a:focus,
-.theme-green .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #27b6af;
-}
-.theme-green .sidebar-left .nav > li.open > a,
-.theme-green .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-green.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-green.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-green .sidebar-profile {
-  background: #13161c;
-}
-.theme-green.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-green.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-green.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-green .sidebar-left .nav > li.active > a,
-.theme-green .sidebar-left .nav > li.active > a:focus,
-.theme-green .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #27b6af;
-}
-.theme-green.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-green.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-green-full #header {
-  background: #27b6af;
-}
-.theme-green-full #header .brand {
-  background: #27b6af;
-}
-.theme-green-full #header .brand .logo {
-  color: #fff;
-}
-.theme-green-full #header button.sidebar-toggle,
-.theme-green-full #header button#toggle-profile,
-.theme-green-full #header .nav li.profile > a {
-  color: #fff;
-}
-.theme-green-full #header button.sidebar-toggle:hover,
-.theme-green-full #header button.sidebar-toggle:active,
-.theme-green-full #header button#toggle-profile:hover,
-.theme-green-full #header button#toggle-profile:active {
-  background: #2ccbc3;
-}
-.theme-green-full #header .nav li.profile > a:hover,
-.theme-green-full #header .nav li.profile > a:active,
-.theme-green-full #header .nav li.profile > a:focus {
-  background: #2ccbc3;
-}
-.theme-green-full .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-green-full .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-green-full .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-green-full .sidebar-left .nav > li.active > a,
-.theme-green-full .sidebar-left .nav > li.active > a:focus,
-.theme-green-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #27b6af;
-}
-.theme-green-full .sidebar-left .nav > li.open > a,
-.theme-green-full .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-green-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-green-full.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-green-full .sidebar-profile {
-  background: #13161c;
-}
-.theme-green-full.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-green-full.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-green-full.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-green-full .sidebar-left .nav > li.active > a,
-.theme-green-full .sidebar-left .nav > li.active > a:focus,
-.theme-green-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #27b6af;
-}
-.theme-green-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-green-full.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-red #header {
-  background: #fff;
-}
-.theme-red #header .brand {
-  background: #e25d5d;
-}
-.theme-red #header .brand .logo {
-  color: #fff;
-}
-.theme-red #header button.sidebar-toggle,
-.theme-red #header button#toggle-profile,
-.theme-red #header .nav li.profile > a {
-  color: #1d212a;
-}
-.theme-red #header button.sidebar-toggle:hover,
-.theme-red #header button.sidebar-toggle:active,
-.theme-red #header button#toggle-profile:hover,
-.theme-red #header button#toggle-profile:active {
-  background: #f6f8f8;
-}
-.theme-red #header .nav li.profile > a:hover,
-.theme-red #header .nav li.profile > a:active,
-.theme-red #header .nav li.profile > a:focus {
-  background: #f6f8f8;
-}
-.theme-red .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-red .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-red .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-red .sidebar-left .nav > li.active > a,
-.theme-red .sidebar-left .nav > li.active > a:focus,
-.theme-red .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #e25d5d;
-}
-.theme-red .sidebar-left .nav > li.open > a,
-.theme-red .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-red.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-red.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-red .sidebar-profile {
-  background: #13161c;
-}
-.theme-red.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-red.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-red.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-red .sidebar-left .nav > li.active > a,
-.theme-red .sidebar-left .nav > li.active > a:focus,
-.theme-red .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #e25d5d;
-}
-.theme-red.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-red.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
-.theme-red-full #header {
-  background: #e25d5d;
-}
-.theme-red-full #header .brand {
-  background: #e25d5d;
-}
-.theme-red-full #header .brand .logo {
-  color: #fff;
-}
-.theme-red-full #header button.sidebar-toggle,
-.theme-red-full #header button#toggle-profile,
-.theme-red-full #header .nav li.profile > a {
-  color: #fff;
-}
-.theme-red-full #header button.sidebar-toggle:hover,
-.theme-red-full #header button.sidebar-toggle:active,
-.theme-red-full #header button#toggle-profile:hover,
-.theme-red-full #header button#toggle-profile:active {
-  background: #e67373;
-}
-.theme-red-full #header .nav li.profile > a:hover,
-.theme-red-full #header .nav li.profile > a:active,
-.theme-red-full #header .nav li.profile > a:focus {
-  background: #e67373;
-}
-.theme-red-full .sidebar-left {
-  background-color: #1d212a;
-}
-.theme-red-full .sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-red-full .sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-red-full .sidebar-left .nav > li.active > a,
-.theme-red-full .sidebar-left .nav > li.active > a:focus,
-.theme-red-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #e25d5d;
-}
-.theme-red-full .sidebar-left .nav > li.open > a,
-.theme-red-full .sidebar-left .nav > li > a:hover {
-  color: #1d2939;
-  background-color: #ffffff;
-}
-.theme-red-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > .nav-sub,
-.theme-red-full.sidebar-mini .sidebar-left .nav > li:hover > .nav-sub {
-  background-color: #1d212a;
-}
-.theme-red-full .sidebar-profile {
-  background: #13161c;
-}
-.theme-red-full.sidebar-mini .sidebar-left .nav > li.active > a,
-.theme-red-full.sidebar-mini .sidebar-left .nav > li.active > a:focus,
-.theme-red-full.sidebar-mini .sidebar-left .nav > li.active > a:hover,
-.theme-red-full .sidebar-left .nav > li.active > a,
-.theme-red-full .sidebar-left .nav > li.active > a:focus,
-.theme-red-full .sidebar-left .nav > li.active > a:hover {
-  color: #fff;
-  background-color: #e25d5d;
-}
-.theme-red-full.sidebar-mini .sidebar-left .nav > li.nav-dropdown-open > a,
-.theme-red-full.sidebar-mini .sidebar-left .nav > li:hover > a {
-  color: #1d2939;
-  background-color: #fff;
-}
 .theme-dark-blue-full #header {
   background: #556b8d;
 }
@@ -1191,7 +624,7 @@ img {
     pading-bottom:5px;
 }
 .btn-success {
-    background: #27B6AF;
+    background: #80b622;
     font-weight:600;
 }
 .disabled {
@@ -1205,7 +638,7 @@ img {
 .btn.btn-success {
   font-weight: 600;
   font-size:14px;
-  background: #27B6AF;
+  background: #2e8db6;
 }
 
 footer {
@@ -1213,3 +646,7 @@ footer {
   padding-bottom:10px;
 }
 
+.bottom {
+  position: relative;
+  bottom: -5px;
+}
