--- a/client/app/views/reset-password.html
+++ b/client/app/views/reset-password.html
@@ -25,9 +25,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="col-md-12">
+                                    <div class="col-md-12 ">
                                         <input type="submit"
-                                               class="col-md-12 btn btn-success"
+                                               class="bottom col-md-12 btn btn-success"
                                                value="Continue"
                                                ng-disabled="process"/>
                                     </div>
