--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -30,8 +30,8 @@
                             </div>
                             
                             <div class="form-group">
-                                <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success" value="Login"/>
+                                <div class="col-md-12 bottom">
+                                    <input type="submit" class="col-md-12 btn btn-success" value="Login"/>
                                 </div>
                             </div>
 
