--- a/client/app/views/register.html
+++ b/client/app/views/register.html
@@ -56,7 +56,7 @@
                             </div>
 
                             <div class="form-group">
-                                <div class="col-md-12">
+                                <div class="col-md-12 bottom">
                                     <input type="submit" class="col-md-12 btn btn-success" value="Register me" ng-disabled="process"/>
                                 </div>
                             </div>
